--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Sweetea</string>
+    /* The followings are items on the menu*/
+    <string name="item1">Flaming Tiger Pearl.</string>
+
     <color name="white">#ffffff</color>
 </resources>
